# LunarVitals-Sensors

./: .gitignore  CMakeLists.txt  app.overlay  nrf52840dk_nrf52840.overlay  prj.conf
DS18B20 Temp Sensor/src/: main.c
DS18B20_Temp_Sensor/: prj.conf
MLX90614_Temp_Sensor/: CMakeLists.txt  prj.conf
MLX90614_Temp_Sensor/src/: main.c
MPU6050 Accelerometer/: prj.conf
MPU6050 Accelerometer/src/: main.c
MPU6050_Accelerometer/: CMakeLists.txt  prj.conf
MPU6050_Accelerometer/src/: BMP280.c  BMP280.h  LSM9DS1.h  MLX90614.c  MLX90614.h  MPU6050.h  i2c.c  i2c.h  main.c
block_diagrams/: README.md
build_1/: .ninja_deps  .ninja_log  .vscode-nrf-connect.json  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
build_1/zephyr/: .cmake.dotconfig.checksum  .config.old  cmake_install.cmake  edt.pickle  isr_tables.c  linker.cmd.dep  linker_zephyr_pre0.cmd.dep  runners.yaml  zephyr.dts.pre  zephyr.elf  zephyr.hex  zephyr.map  zephyr.stat  zephyr_final.map  zephyr_pre0.elf  zephyr_pre0.map
i2c_devices/: CMakeLists.txt  LICENSE  README.md  prj.conf  prj.overlay
i2c_devices/src/: BMP280.c  BMP280.h  MAX30102.c  MAX30102.h  MLX90614.h  MPU6050.c  MPU6050.h  heart_rate.c  i2c.c  i2c.h  main.c
pulse_HR/: CMakeLists.txt  app.overlay  prj.conf
pulse_HR/src/: main.c
respiratory_breathing_rate/: CMakeLists.txt
respiratory_breathing_rate/src/: adc.c  main.c
src/: BMP280.c  BMP280.h  LSM9DS1.c  LSM9DS1.h  MAX30102.c  MAX30102.h  adc.c  data.txt  heartRate.c  i2c_device.c  i2c_device.h  main.c  plot.py  spo2_algorithm.c  spo2_algorithm.h
(+34 files in other folders)
